--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500&display=swap');
+
 body {
-    font-family: 'Arimo', sans-serif;
+    font-family: 'Work Sans', sans-serif;
+    background-color: aqua;
 }
 
 #landing-main-elements {
     margin: 0 auto;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
@@ -19,22 +22,42 @@ body {
 
 #website-title {
     font-size: 250%;
-    color:rgb(46, 24, 189);
+    color: rgb(255, 255, 255);
 }
 
 #landing-form {
     position: absolute;
-    font-size: 120%;
-    font-weight: 600;
-    color:rgb(0, 0, 0);
+    margin-top: 0;
 }
 
 .landing-input {
     margin-top: 10px;
-    border-radius: 20px;
+    border-radius: 6px;
     border-style: none;
     height: 2vw;
     width: 20vw;
+}
+
+
+label {
+    font-weight: 300;
+    font-size: 130%;
+}
+
+#submit-btn {
+    font-family: 'Work Sans', sans-serif;
+    background-color: #FAFBFC;
+    border: 1px solid rgba(27, 31, 35, 0.15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
+    box-sizing: border-box;
+    color: #24292E;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 20px;
+    list-style: none;
+    padding: 5px 15px;
+    position: relative;
 }
 
 #video {
