--- a/src/styles/ThreeDayForecast.css
+++ b/src/styles/ThreeDayForecast.css
@@ -10,8 +10,12 @@
     text-align: center;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     border-bottom: 0.75px solid black;
+}
+
+.hourly-summary p {
+    align-self: center;
 }
 
 .daily-forecast {
@@ -27,6 +31,10 @@
 
 .temp-option {
     display: flex;
+    margin-left: 15px;
+}
+
+.temp-option p {
     margin-left: 15px;
 }
 
